--- a/intro/src/app/product/product.component.html
+++ b/intro/src/app/product/product.component.html
@@ -1,1 +1,16 @@
-<p>product works!</p>
+<h3 *ngIf="products">{{title}}</h3>
+<div class="row">
+  <ng-template>
+    <div class="alert alert-primary" role="alert">
+        Bu kategoride ürün yoktur.
+    </div>
+  </ng-template>
+  <div *ngFor="let product of products" class="card" style="width: 18rem;">
+    <img [src]="product.imageUrl" class="card-img-top" alt="...">
+    <div class="card-body">
+    <h5 class="card-title">{{product.name}} {{product.price}}</h5>
+      <p class="card-text">{{product.description}}</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+</div>
